--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="score-display">
                 <span id="currentScore">0</span> pts
             </div>
-            <image src="./assets/logo.png"></image>
+            <image src="./assets/logo2.png"></image>
             <div class="progress-bar">
                 <div class="progress-fill" id="progressBar"></div>
             </div>
