--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div class="game-container">
         <div class="header">
-            <div class="score-display">
+           <!-- <div class="score-display">
                 <span id="currentScore">0</span> pts
-            </div>
+            </div>-->
             <image src="./assets/logo2.png"></image>
             <div class="progress-bar">
                 <div class="progress-fill" id="progressBar"></div>
