--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="result-description" id="resultDescription">Description</div>
             <div class="badges-earned" id="badgesEarned"></div>
             <strong>Compartilhe seu resultado com Eduardo e receba o feedback do especialista:</strong><br>
-            <button class="btn" onclick="shareToWhatsApp()" style="background: #25D366; margin-top: 20px;">
+            <button class="btn" onclick="shareToWhatsApp()" style="background: #167239; margin-top: 20px;">
                 📱 Enviar para Eduardo via WhatsApp
             </button>
         </div>
