--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
                     <small>Já vejo a importância, mas ainda não comecei</small>
                     <div class="badge">🤔 Planejador</div>
                 </div>
-                <div class="option" onclick="selectOption(5, 100, 'Executador')" data-value="comecei">
+                <div class="option" onclick="selectOption(5, 100, 'Executor')" data-value="comecei">
 
                     <strong>Já comecei a trabalhar nisso</strong><br>
                     <small>Primeiros passos dados, criando conteúdo</small>
-                    <div class="badge">🚀 Executador</div>
+                    <div class="badge">🚀 Executor</div>
                 </div>
                 <div class="option" onclick="selectOption(5, 150, 'Brand Master')" data-value="estabelecida">
 
@@ -252,7 +252,7 @@
             <div class="result-description" id="resultDescription">Description</div>
             <div class="badges-earned" id="badgesEarned"></div>
             <strong>Compartilhe seu resultado com Eduardo e receba o feedback do especialista:</strong><br>
-            <button class="btn" onclick="shareToWhatsApp()" style="background: #167239; margin-top: 20px;">
+            <button class="btn" onclick="shareToWhatsApp()" style="background: #3f5c4a; margin-top: 20px;">
                 📱 Enviar para Eduardo via WhatsApp
             </button>
         </div>
