--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             <div class="question-title">⏰ Qual seu ritmo de trabalho?</div>
             <div class="question-subtitle">Vamos entender como você administra seu tempo.</div>
             <div class="options">
-                <div class="option" onclick="selectOption(1, 100, 'Equilibrista')" data-value="6-8h">
+                <div class="option" onclick="selectOption(1, 100, '🎯 Equilibrista')" data-value="6-8h">
 
                     <strong>6-8 horas por dia</strong><br>
                     <small>Busco equilibrio entre trabalho e vida pessoal</small>
                     <div class="badge">🎯 Equilibrista</div>
                 </div>
-                <div class="option" onclick="selectOption(1, 150, 'Dedicado')" data-value="8-12h">
+                <div class="option" onclick="selectOption(1, 150, '⚡ Dedicado')" data-value="8-12h">
 
                     <strong>8-12 horas por dia</strong><br>
                     <small>Trabalho intenso, mas ainda tenho tempo para outras atividades</small>
                     <div class="badge">⚡ Dedicado</div>
                 </div>
-                <div class="option" onclick="selectOption(1, 200, 'Workaholic')" data-value="12h+">
+                <div class="option" onclick="selectOption(1, 200, '💪 Workaholic')" data-value="12h+">
 
                     <strong>Mais de 12 horas por dia</strong><br>
                     <small>Medicina é minha vida, trabalho é prioridade</small>
@@ -68,19 +68,19 @@
             <div class="question-title">💰 Sua faixa de renda mensal atual:</div>
             <div class="question-subtitle">Informação importante para direcionamento estratégico</div>
             <div class="options">
-                <div class="option" onclick="selectOption(2, 50, 'Construindo')" data-value="ate-5k">
+                <div class="option" onclick="selectOption(2, 50, '🌱 Construindo')" data-value="ate-5k">
 
                     <strong>Até R$ 5.000</strong><br>
                     <small>Ainda construindo minha base financeira</small>
                     <div class="badge">🌱 Construindo</div>
                 </div>
-                <div class="option" onclick="selectOption(2, 100, 'Crescendo')" data-value="5-10k">
+                <div class="option" onclick="selectOption(2, 100, '📈 Crescendo')" data-value="5-10k">
 
                     <strong>R$ 5.000 - R$ 10.000</strong><br>
                     <small>Em crescimento constante</small>
                     <div class="badge">📈 Crescendo</div>
                 </div>
-                <div class="option" onclick="selectOption(2, 150, 'Estabelecido')" data-value="10k+">
+                <div class="option" onclick="selectOption(2, 150, '💎 Estabelecido')" data-value="10k+">
 
                     <strong>Acima de R$ 10.000</strong><br>
                     <small>Situação financeira estável</small>
@@ -98,13 +98,13 @@
                     <strong>Não faço plantões</strong><br>
                     <small>Foco apenas na residência/trabalho principal</small>
                 </div>
-                <div class="option" onclick="selectOption(3, 50, 'Complementar')" data-value="1-2-mes">
+                <div class="option" onclick="selectOption(3, 50, '💡 Complementar')" data-value="1-2-mes">
 
                     <strong>1-2 plantões por mês</strong><br>
                     <small>Renda complementar ocasional</small>
                     <div class="badge">💡 Complementar</div>
                 </div>
-                <div class="option" onclick="selectOption(3, 100, 'Intensivo')" data-value="3+-mes">
+                <div class="option" onclick="selectOption(3, 100, '🔥 Intensivo')" data-value="3+-mes">
 
                     <strong>3 ou mais por mês</strong><br>
                     <small>Plantões são parte importante da minha renda</small>
@@ -118,24 +118,24 @@
             <div class="question-title">🎯 Sua marca pessoal médica:</div>
             <div class="question-subtitle">Como está o desenvolvimento da sua identidade profissional?</div>
             <div class="options">
-                <div class="option" onclick="selectOption(4, 0, 'Potencial')" data-value="nao-tenho">
+                <div class="option" onclick="selectOption(4, 0, '💎 Potencial')" data-value="nao-tenho">
                     <strong>Ainda não pensei nisso</strong><br>
                     <small>Foco apenas no trabalho técnico</small>
                     <div class="badge">💎 Potencial</div>
                 </div>
-                <div class="option" onclick="selectOption(4, 50, 'Planejador')" data-value="pensando">
+                <div class="option" onclick="selectOption(4, 50, '🤔 Planejador')" data-value="pensando">
 
                     <strong>Estou pensando em desenvolver</strong><br>
                     <small>Já vejo a importância, mas ainda não comecei</small>
                     <div class="badge">🤔 Planejador</div>
                 </div>
-                <div class="option" onclick="selectOption(4, 100, 'Executor')" data-value="comecei">
+                <div class="option" onclick="selectOption(4, 100, '🚀 Executor')" data-value="comecei">
 
                     <strong>Já comecei a trabalhar nisso</strong><br>
                     <small>Primeiros passos dados, criando conteúdo</small>
                     <div class="badge">🚀 Executor</div>
                 </div>
-                <div class="option" onclick="selectOption(4, 150, 'Brand Master')" data-value="estabelecida">
+                <div class="option" onclick="selectOption(4, 150, '👑 Brand Master')" data-value="estabelecida">
 
                     <strong>Tenho uma marca bem estabelecida</strong><br>
                     <small>Sou reconhecido na minha área</small>
@@ -202,12 +202,12 @@
                     <strong>Nunca fiz tráfego pago</strong><br>
                     <small>Ainda não investi em publicidade online</small>
                 </div>
-                <div class="option" onclick="selectOption(6, 75, 'Digital Explorer')" data-value="testei">
+                <div class="option" onclick="selectOption(6, 75, '🔍 Digital Explorer')" data-value="testei">
                     <strong>Já testei algumas campanhas</strong><br>
                     <small>Fiz alguns testes, mas sem estratégia clara</small>
                     <div class="badge">🔍 Digital Explorer</div>
                 </div>
-                <div class="option" onclick="selectOption(6, 150, 'Marketing Pro')" data-value="uso-regularmente">
+                <div class="option" onclick="selectOption(6, 150, '📊 Marketing Pro')" data-value="uso-regularmente">
 
                     <strong>Uso regularmente</strong><br>
                     <small>Tenho campanhas ativas e estratégia definida</small>
@@ -221,24 +221,24 @@
             <div class="question-title">🎯 Seu principal objetivo:</div>
             <div class="question-subtitle">Das opções abaixo, qual é a sua maior prioridade?</div>
             <div class="options">
-                <div class="option" onclick="selectOption(7, 50, 'Construtor')" data-value="aumentar-pacientes">
+                <div class="option" onclick="selectOption(7, 50, '👥 Construtor')" data-value="aumentar-pacientes">
 
                     <strong>Aumentar número de pacientes</strong><br>
                     <small>Quero expandir minha base de atendimento</small>
                     <div class="badge">👥 Construtor</div>
                 </div>
-                <div class="option" onclick="selectOption(7, 75, 'Especialista')" data-value="reconhecimento">
+                <div class="option" onclick="selectOption(7, 75, '🏆 Especialista')" data-value="reconhecimento">
                     <strong>Ser reconhecido como especialista</strong><br>
                     <small>Quero autoridade na minha área</small>
                     <div class="badge">🏆 Especialista</div>
                 </div>
-                <div class="option" onclick="selectOption(7, 100, 'Empreendedor')" data-value="renda-extra">
+                <div class="option" onclick="selectOption(7, 100, '💰 Empreendedor')" data-value="renda-extra">
 
                     <strong>Criar fontes de renda extra</strong><br>
                     <small>Consultoria, cursos, produtos digitais</small>
                     <div class="badge">💰 Empreendedor</div>
                 </div>
-                <div class="option" onclick="selectOption(7, 125, 'Educador')" data-value="ensinar">
+                <div class="option" onclick="selectOption(7, 125, '📚 Educador')" data-value="ensinar">
                     <strong>Educar e compartilhar conhecimento</strong><br>
                     <small>Impactar outros profissionais e pacientes</small>
                     <div class="badge">📚 Educador</div>
