--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         <!-- Resultado -->
         <div id="resultScreen" class="result-container">
             <div class="result-avatar" id="resultAvatar">🏆</div>
+            <div id="showScore"></div>
             <div class="result-title" id="resultTitle">Seu Perfil</div>
             <div class="result-description" id="resultDescription">Description</div>
             <div class="badges-earned" id="badgesEarned"></div>
